improved readability with native yaml

--- a/roles/vpn/tasks/main.yml
+++ b/roles/vpn/tasks/main.yml
@@ -16,8 +16,7 @@
       package: name=strongswan state=present
 
     - name: Get StrongSwan versions
-      shell: >
-        ipsec --versioncode | grep -oE "^U([0-9]*|\.)*" | sed "s/^U\|\.//g"
+      shell: ipsec --versioncode | grep -oE "^U([0-9]*|\.)*" | sed "s/^U\|\.//g"
       register: strongswan_version
 
     - include: ipec_configuration.yml
