--- a/roles/vpn/tasks/ubuntu.yml
+++ b/roles/vpn/tasks/ubuntu.yml
@@ -7,7 +7,11 @@
   when: ansible_distribution_version == "16.04"
 
 - name: Ubuntu | Install strongSwan
-  apt: name=strongswan state=latest update_cache=yes install_recommends=yes
+  apt:
+    name: strongswan
+    state: latest
+    update_cache: yes
+    install_recommends: yes
 
 - name: Ubuntu | Enforcing ipsec with apparmor
   shell: aa-enforce "{{ item }}"
@@ -28,10 +32,17 @@
     - netfilter-persistent
 
 - name: Ubuntu | Ensure that the strongswan service directory exist
-  file: path=/etc/systemd/system/strongswan.service.d/ state=directory mode=0755  owner=root group=root
+  file:
+    path: /etc/systemd/system/strongswan.service.d/
+    state: directory
+    mode: 0755
+    owner: root
+    group: root
 
 - name: Ubuntu | Setup the cgroup limitations for the ipsec daemon
-  template: src=100-CustomLimitations.conf.j2 dest=/etc/systemd/system/strongswan.service.d/100-CustomLimitations.conf
+  template:
+    src: 100-CustomLimitations.conf.j2
+    dest: /etc/systemd/system/strongswan.service.d/100-CustomLimitations.conf
   notify:
     - daemon-reload
     - restart strongswan
