--- a/roles/vpn/tasks/openssl.yml
+++ b/roles/vpn/tasks/openssl.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Ensure the pki directory is not exist
+- name: Ensure the pki directory does not exist
   local_action:
     module: file
     dest: configs/{{ IP_subject_alt_name }}/pki
@@ -8,7 +8,7 @@
   become: no
   when: easyrsa_reinit_existent == True
 
-- name: Ensure the pki directories are exist
+- name: Ensure the pki directories exists
   local_action:
     module: file
     dest: "configs/{{ IP_subject_alt_name }}/pki/{{ item }}"
@@ -23,7 +23,7 @@
     - private
     - reqs
 
-- name: Ensure the files are exist
+- name: Ensure the files exists
   local_action:
     module: file
     dest: "configs/{{ IP_subject_alt_name }}/pki/{{ item }}"
