--- a/roles/vpn/tasks/client_configs.yml
+++ b/roles/vpn/tasks/client_configs.yml
@@ -27,12 +27,22 @@
 - name: Build the strongswan app android config
   template:
     src: sswan.j2
-    dest: configs/{{ IP_subject_alt_name }}/{{ item.0 }}.sswan
+    dest: configs/{{ IP_subject_alt_name }}/android_{{ item.0 }}.sswan
     mode: 0600
   become: no
   with_together:
     - "{{ users }}"
     - "{{ PayloadContent.results }}"
+  no_log: True
+
+- name: Build the android helper html
+  template:
+    src: android_html_helper.j2
+    dest: configs/{{ IP_subject_alt_name }}/android_{{ item.0 }}_helper.html
+    mode: 0600
+  become: no
+  with_together:
+    - "{{ users }}"
   no_log: True
 
 - name: Build the client ipsec config file
