--- a/config.cfg
+++ b/config.cfg
@@ -70,7 +70,7 @@ cloud_providers:
     image:
       offer: UbuntuServer
       publisher: Canonical
-      sku: '16.04-LTS' # 16.04-LTS
+      sku: '16.04-LTS' # 16.04-LTS / 17.04
       version: latest
   digitalocean:
     size: 512mb
