Generate p12 each deployment. Generate ps1 scripts if windows supported. Define `become` for all the section.

--- a/config.cfg
+++ b/config.cfg
@@ -53,7 +53,7 @@ congrats:
     "#        and ensure that all your traffic passes through the VPN.      #"
     "#               Local DNS resolver {{ local_service_ip }}              #"
   p12_pass: |
-    "#                The p12 and SSH keys password is {{ easyrsa_p12_export_password }}             #"
+    "#                The p12 and SSH keys password for new users is {{ easyrsa_p12_export_password }}             #"
   ca_key_pass: |
     "#                  The CA key password is {{ easyrsa_CA_password }}                 #"
   ssh_access: |
