--- a/roles/cloud-gce/tasks/main.yml
+++ b/roles/cloud-gce/tasks/main.yml
@@ -15,9 +15,9 @@
 
     - name: Network configured
       gce_net:
-        name: "algo-{{ server_name }}"
-        fwname: "algo-{{ server_name }}-fw"
-        allowed: "udp:500,4500;tcp:22;icmp"
+        name: "algo-net-{{ server_name }}"
+        fwname: "algo-net-{{ server_name }}-fw"
+        allowed: "udp:500,4500;tcp:22"
         state: "present"
         mode: auto
         src_range: 0.0.0.0/0
