--- a/roles/cloud-gce/tasks/main.yml
+++ b/roles/cloud-gce/tasks/main.yml
@@ -32,7 +32,7 @@
         credentials_file: "{{ credentials_file_path }}"
         project_id: "{{ project_id }}"
         metadata: '{"ssh-keys":"ubuntu:{{ ssh_public_key_lookup }}"}'
-        network: "algo-{{ server_name }}"
+        network: "algo-net-{{ server_name }}"
         tags:
           - "environment-algo"
       register: google_vm
