commiting to master, I'm the worst

--- a/config.cfg
+++ b/config.cfg
@@ -3,8 +3,10 @@
 # Add as many users as you want for your VPN server here.
 # Credentials will be generated for each one.
 users:
-  - dan
-  - jack
+  - david.beale
+  - hugo.bastien
+  - myle.rayfield
+  - melinda.chao
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
