--- a/config.cfg
+++ b/config.cfg
@@ -5,8 +5,9 @@
 users:
   - david.beale
   - hugo.bastien
-  - myle.rayfield
+  - myles.rayfield
   - melinda.chao
+  - bryan.mahoney
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
