--- a/config.cfg
+++ b/config.cfg
@@ -8,6 +8,7 @@ users:
   - myles.rayfield
   - melinda.chao
   - bryan.mahoney
+  - caitlin.lisooey
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
