Add user alex.amyot

--- a/config.cfg
+++ b/config.cfg
@@ -9,6 +9,7 @@ users:
   - melinda.chao
   - bryan.mahoney
   - caitlin.lisooey
+  - alex.amyot
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
