Add my username to permissions

--- a/config.cfg
+++ b/config.cfg
@@ -11,6 +11,7 @@ users:
   - caitlin.lisooey
   - cabouffard
   - alex.amyot
+  - anthony.gonzales
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
