--- a/config.cfg
+++ b/config.cfg
@@ -12,6 +12,8 @@ users:
   - cabouffard
   - alex.amyot
   - anthony.gonzales
+  - sherry.son
+  - kate.park
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
