Add user peter.berkenbosch

--- a/config.cfg
+++ b/config.cfg
@@ -12,6 +12,7 @@ users:
   - cabouffard
   - alex.amyot
   - anthony.gonzales
+  - peter.berkenbosch
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
