Add StrongSwan log level config option to ipsec.conf template

--- a/config.cfg
+++ b/config.cfg
@@ -20,6 +20,10 @@ vpn_network_ipv6: 'fd9d:bc11:4020::/48'
 server_name: "{{ ansible_ssh_host }}"
 IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
+# StrongSwan log level
+# https://wiki.strongswan.org/projects/strongswan/wiki/LoggerConfiguration
+strongswan_log_level: 2
+
 adblock_lists:
  - "http://winhelp2002.mvps.org/hosts.txt"
  - "https://adaway.org/hosts.txt"
