Fixing branch issues

--- a/config.cfg
+++ b/config.cfg
@@ -11,11 +11,27 @@ users:
   - caitlin.lisooey
   - cabouffard
   - alex.amyot
-  - anthony.gonzales
-  - peter.berkenbosch
   - sherry.son
   - kate.park
-
+  - lara.press
+  - max.kaplun
+  - mimi.middleton
+  - jamie.mccroskery
+  - gina.benedetti
+  - guillame.bourrouse
+  - braden.douglass
+  - gen.migneron
+  - louise.heng
+  - nicolas.dery
+  - alix.graham-tremblay
+  - nicolas.charley
+  - simon.walsh
+  - david.ang
+  - francios.bianchin
+  - emma.gilhuly
+  - laurent.dario
+  - elly.pham
+  - arnaud.lassignardie
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
