--- a/config.cfg
+++ b/config.cfg
@@ -32,6 +32,7 @@ users:
   - laurent.dario
   - elly.pham
   - arnaud.lassignardie
+  - peter.berkenbosch
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
