--- a/config.cfg
+++ b/config.cfg
@@ -33,6 +33,7 @@ users:
   - elly.pham
   - arnaud.lassignardie
   - peter.berkenbosch
+  - thoren.palacio
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
