minimum DigitalOcean $5 type now 's-1vcpu-1gb'
https://www.digitalocean.com/pricing/

--- a/config.cfg
+++ b/config.cfg
@@ -76,7 +76,7 @@ cloud_providers:
       sku: '16.04-LTS' # 16.04-LTS / 17.04
       version: latest
   digitalocean:
-    size: 512mb
+    size: s-1vcpu-1gb
     image: "ubuntu-16-04-x64" # ubuntu-16-04-x64 / ubuntu-17-04-x64
   ec2:
     size: t2.micro
