Configure DNS names for each user
In the dns_adblocking role, assign each Algo user a domain name,
allowing connected users to communicate internally without having to
know each other's VPN IP addresses.
The user can set this in config.cfg as vpn_domain.

This required one potentially breaking change:
disallowing multiple connections from the same Algo user.

The server's ipsec.conf is also modified, with a connection per-user
that sets an IP address based on the order the user appears in the
config.cfg file.

Finally, a new /etc/hosts.ipsecclients file is created, which maps from
the IP addresses assigned in ipsec.conf to $user.$vpn_domain

--- a/config.cfg
+++ b/config.cfg
@@ -47,6 +47,12 @@ CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 # Block traffic between connected clients
 BetweenClients_DROP: Y
 
+# Used for resolving hosts within the VPN, not connecting to the VPN
+# If BetweenClients_DROP is set to 'N', and the dns_adblocking role is enabled,
+# connected users will be able to communicate with each other using
+# $user.$vpn_domain DNS names
+vpn_domain: algo.internal
+
 congrats:
   common: |
     "#                          Congratulations!                            #"
