--- a/config.cfg
+++ b/config.cfg
@@ -86,6 +86,9 @@ cloud_providers:
   gce:
     size: f1-micro
     image: ubuntu-1604 # ubuntu-1604 / ubuntu-1704
+  lightsail:
+    size: nano_1_0
+    image: ubuntu_16_04
   local:
 
 fail_hint:
