--- a/config.cfg
+++ b/config.cfg
@@ -89,6 +89,10 @@ cloud_providers:
   lightsail:
     size: nano_1_0
     image: ubuntu_16_04
+  scaleway:
+    size: VC1S
+    image: Ubuntu Xenial
+    arch: x86_64
   local:
 
 fail_hint:
