Ansible 2.4, Lightsail, Scaleway, DreamCompute (OpenStack) integration (#804)
* Move to ansible-2.4.3

* Add Lightsail support #623

* Fixing the EC2 deployment

* Scaleway integration #623

* OpenStack cloud provider (DreamCompute optimised) #623

* Remove the security role

* Enable unattended-upgrades for clouds

* New requirements to make Azure and GCE work

--- a/config.cfg
+++ b/config.cfg
@@ -86,6 +86,16 @@ cloud_providers:
   gce:
     size: f1-micro
     image: ubuntu-1604 # ubuntu-1604 / ubuntu-1704
+  lightsail:
+    size: nano_1_0
+    image: ubuntu_16_04
+  scaleway:
+    size: VC1S
+    image: Ubuntu Xenial
+    arch: x86_64
+  openstack:
+    flavor_ram: ">=512"
+    image:  Ubuntu-16.04
   local:
 
 fail_hint:
