--- a/config.cfg
+++ b/config.cfg
@@ -3,12 +3,8 @@
 # Add as many users as you want for your VPN server here.
 # Credentials will be generated for each one.
 users:
-  - mac
-  - ios
-  - s_ios
-  - s_mac
-  - u_ios
-  - u_nac
+  - dan
+  - jack
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
