--- a/config.cfg
+++ b/config.cfg
@@ -3,7 +3,7 @@
 # Add as many users as you want for your VPN server here.
 # Credentials will be generated for each one.
 users:
-  - user1
+  - dan
   - jack
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
