--- a/playbooks/facts/main.yml
+++ b/playbooks/facts/main.yml
@@ -43,3 +43,4 @@
 - name: Define the commonName
   set_fact:
     IP_subject_alt_name: "{{ IP_subject_alt_name }}"
+    DNS_subject_alt_name: "{{ DNS_subject_alt_name }}"
