Add ipv6 address to subjectAltName if supported
CHANGELOG

Some changes

Some changes

--- a/roles/vpn/defaults/main.yml
+++ b/roles/vpn/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
+ipv6_support: false
+domain: false
+subjectAltName_IP: "IP:{{ IP_subject_alt_name }}"
 openssl_bin: openssl
 strongswan_enabled_plugins:
   - aes
