--- a/roles/dns_encryption/tasks/ubuntu.yml
+++ b/roles/dns_encryption/tasks/ubuntu.yml
@@ -35,14 +35,12 @@
     owner: root
     group: root
 
-#- name: Ubuntu | Setup the cgroup limitations for dnscrypt-proxy
-#  copy:
-#    dest: /etc/systemd/system/dnscrypt-proxy.service.d/100-CustomLimitations.conf
-#    content: |
-#      [Service]
-#      MemoryLimit=16777216
-#      CPUAccounting=true
-#      CPUQuota=5%
-#  notify:
-#    - daemon-reload
-#    - restart dnscrypt-proxy
+- name: Ubuntu | Add capabilities to bind ports
+  copy:
+    dest: /etc/systemd/system/dnscrypt-proxy.service.d/99-capabilities.conf
+    content: |
+      [Service]
+      AmbientCapabilities=CAP_NET_BIND_SERVICE
+  notify:
+   - daemon-reload
+   - restart dnscrypt-proxy
