--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,20 @@ matrix:
 addons:
   apt:
     sources:
-    - sourceline: 'ppa:ubuntu-lxc/stable'
+      - sourceline: 'ppa:ubuntu-lxc/stable'
     packages:
-    - python-pip
-    - lxc
-    - lxc-templates
-    - expect-dev
-    - debootstrap
-    - shellcheck
-    - tree
+      - python-pip
+      - lxd
+      - expect-dev
+      - debootstrap
+      - shellcheck
+      - tree
+      - bridge-utils
+      - dnsutils
+      - build-essential
+      - libssl-dev
+      - libffi-dev
+      - python-dev
 
 cache:
   directories:
@@ -43,16 +48,14 @@ before_install:
 
 install:
   - sudo tar xf $HOME/lxc/cache.tar -C / || echo "Didn't extract cache."
-  - export LXC_ROOTFS=/var/lib/lxc/$LXC_NAME/rootfs
-  - 'sudo lxc-create -n $LXC_NAME -t ubuntu -- -r $LXC_RELEASE --mirror http://mirrors.us.kernel.org/ubuntu --packages python || true'
-  - 'sudo lxc-start -n $LXC_NAME && until (sudo lxc-info -n $LXC_NAME | grep -q ^IP:); do printf . && sleep 1; done && sleep 2'
-  - export LXC_IP="$(sudo lxc-info -Hin $LXC_NAME)"
-  - sudo /bin/bash -c "printf '\n$LXC_IP test.lxc\n' >> /etc/hosts"
   - ssh-keygen -f ~/.ssh/id_rsa -t rsa -N ''
   - chmod 0644 ~/.ssh/config
-  - sudo mkdir -vm 0700 $LXC_ROOTFS/root/.ssh/
-  - sudo cp -v ~/.ssh/id_rsa.pub $LXC_ROOTFS/root/.ssh/authorized_keys
-  - sudo apt-get install build-essential libssl-dev libffi-dev python-dev
+  - echo -e "#cloud-config\nssh_authorized_keys:\n - $(cat ~/.ssh/id_rsa.pub)" | sudo lxc profile set default user.user-data -
+  - sudo cp -f tests/lxd-bridge /etc/default/lxd-bridge
+  - sudo service lxd restart
+  - sudo lxc launch ${LXC_DISTRO}:${LXC_RELEASE} ${LXC_NAME}
+  - until host ${LXC_NAME}.lxd 10.0.8.1 -t A; do sleep 3; done
+  - export LXC_IP="$(dig ${LXC_NAME}.lxd @10.0.8.1 +short)"
   - pip install -r requirements.txt
   - pip install ansible-lint
   - gem install awesome_bot
