--- a/config.cfg
+++ b/config.cfg
@@ -29,7 +29,7 @@ adblock_lists:
  - "https://www.malwaredomainlist.com/hostslist/hosts.txt"
  - "https://hosts-file.net/ad_servers.txt"
 
-# Enalbe DNS encryption. Use dns_encrypted_provider to specify the provider. If false dns_servers should be specified
+# Enable DNS encryption. Use dns_encryption_provider to specify the provider. If false dns_servers should be specified
 dns_encryption: true
 
 # Possible values: google, cloudflare
